# cosmetic-workshop-os

./: .gitignore  AGENTS.md  CODEX_PR0_CREATE_REPO_STRUCTURE_PROMPT.md  CONTRIBUTING.md  Makefile  README.md  code_review.md  pytest.ini
backend/: AGENTS.md  pyproject.toml
backend/app/: AGENTS.md  __init__.py  main.py
backend/app/api/: alerts.py  backups.py  catalog.py  catalog_assignments.py  client_recipes.py  client_wishes_feedback.py  clients.py  database.py  demo_data.py  exports.py  health.py  imports.py  ingredient_lots.py  ingredients.py  inventory.py  onboarding.py  orders.py  packaging_items.py  packaging_stock_movements.py  production_batches.py  production_confirmation.py  production_readiness.py  purchase_suggestions.py  recipes.py  report_documents.py  reports.py  settings.py  stock_movements.py
backend/app/db/: __init__.py  config.py  connection.py  migrations.py  paths.py  transactions.py
backend/app/domain/: __init__.py  alerts.py  catalog.py  client_recipes.py  client_wishes_feedback.py  clients.py  conversions.py  decimal_utils.py  errors.py  ingredient_lots.py  ingredients.py  measurements.py  orders.py  packaging_items.py  packaging_stock_movements.py  production_readiness.py  purchase_suggestions.py  recipes.py  stock_movements.py  units.py
backend/app/models/: alert.py  audit.py  catalog.py  client.py  client_recipe.py  client_wishes_feedback.py  demo_data.py  imports.py  ingredient.py  ingredient_lot.py  onboarding.py  order.py  packaging_item.py  packaging_stock_movement.py  production_batch.py  purchase_suggestion.py  recipe.py  (+2 more)
(+264 files in other folders)
