[project]
name = "cosmetic-workshop-os-backend"
version = "0.1.0"
description = "Local-first backend API for Мастерская косметолога."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27,<1.0",
  "pytest>=8,<9",
]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]
